Add basic swagger
