# laravel-api/api/User/Controllers/DomainController.php
@@ -6,6 +6,7 @@ use Api\User\Services\TeamService;
 use Api\User\Services\UserService;
 use Infrastructure\Http\Controller;
 use Api\User\Requests\SignupDomainRequest;
+use OpenApi\Annotations as OA;
 
 class DomainController extends Controller
 {
@@ -22,10 +23,15 @@ class DomainController extends Controller
 
     /**
      * @OA\Post(
-     *   path="/signup/domain",
+     *  tags={"Domain", "User"},
+     *   @OA\Parameter(name="filter",in="query", @OA\JsonContent(
+     *      @OA\Property(property="type", type="string"),
+     *      @OA\Property(property="color", type="string"),
+     *   )),
+     *  security={"api_key"},
+     *     path="/signup/domain",
      *     summary="Create a domain",
-     *     description="Creates a domain. Depending on the configuration the domain `domain_name` 
-     *                      can be a subdomain of the main domain or an independent domain",
+     *     description="Creates a domain. Depending on the configuration the domain `domain_name` can be a subdomain of the main domain or an independent domain",
      *     @OA\RequestBody(
      *         description="Client side search object",
      *         required=true,
@@ -34,15 +40,8 @@ class DomainController extends Controller
      *     @OA\Response(
      *      response=200,
      *      description="Get application name and version",
-     *      @OA\MediaType(
-     *           mediaType="application/json",
-     *           @OA\Schema(
-     *               @OA\Property(property="title", type="string", description="APP_NAME variable"),
-     *               @OA\Property(property="version", type="string", description="Fit tag version")
-     *           ),
-     *           @OA\Examples(summary="App info", value={"title": "FusionPBX API", "version" : "0.0.8-62-g192d97b"}),
-     *      )
-     *     )
+     *      @OA\JsonContent(ref="#/components/schemas/Domain"),
+     *     ),
      * )
      */
     /**
